--- a/src/styles/CV.css
+++ b/src/styles/CV.css
@@ -6,4 +6,5 @@
     left: 5vw;
     font-size: 0.8rem;
     cursor: url(../assets/cur.cur), auto !important;
+    font-family: "Noto Sans KR", sans-serif;
 }
