--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,7 +1,7 @@
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500&display=swap');
 .background {
-    width: 100vw;
-    height: 100vh;
-    cursor: url(../assets/cur.cur), auto !important;
+  width: 100vw;
+  height: 100vh;
+  cursor: url(../../public/assets/icons/cur.cur), auto !important;
 }
