--- a/src/styles/exhibitions.css
+++ b/src/styles/exhibitions.css
@@ -1,3 +1,4 @@
+/* exhibitions 메인 페이지 */
 .exhibitionsListContainer {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
@@ -33,6 +34,7 @@
   background-color: rgb(255, 255, 255);
 }
 
+/* exhibition 페이지 */
 .exhibitionContainer {
   position: relative;
   display: flex;
@@ -43,6 +45,7 @@
   top: 10vh;
   cursor: url(../../public/assets/icons/cur.cur), auto !important;
   font-family: "Noto Sans KR", sans-serif;
+  font-size: 1.3rem;
 }
 
 .exhibitionItem {
@@ -50,4 +53,28 @@
   max-width: 50vw;
   max-height: 70vh;
   object-fit: contain;
+}
+
+@media all and (max-width: 767px) {
+  .exhibitionsListContainer {
+    display: flex;
+    flex-direction: column;
+    top: 12vh;
+  }
+  .exhibitionListItem {
+    font-size: 0.7rem;
+  }
+  .poster {
+    width: 70vw;
+  }
+  .exhibitionContainer {
+    top: 8vh;
+    font-size: 1rem;
+  }
+  .exhibitionItem {
+    margin-top: 0vh;
+    margin-bottom: 3vh;
+    max-width: 80vw;
+    max-height: 60vh;
+  }
 }
