--- a/src/styles/works.css
+++ b/src/styles/works.css
@@ -3,18 +3,68 @@
   position: relative;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  flex-wrap: wrap;
   justify-items: center;
   align-items: center;
   row-gap: 7vh;
   margin-left: auto;
   margin-right: auto;
   margin-top: auto;
-  margin-bottom: auto;
+  padding-bottom: 10vh;
   width: 75vw;
-  height: 75vh;
+  height: auto;
   top: 15vh;
   cursor: url(../../public/assets/icons/cur.cur), auto !important;
+}
+
+.worksWrapFour {
+  position: relative;
+  display: grid;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  padding-bottom: 10vh;
+  top: 20vh;
+  width: 75vw;
+  row-gap: 6vh;
+  grid-template-columns: repeat(3, auto);
+  grid-template-rows: repeat(3, auto);
+}
+.workLinkFour:nth-child(1) {
+  position: relative;
+  left: 4vw;
+}
+.workLinkFour:nth-child(2) {
+  position: relative;
+  left: 6vw;
+  bottom: 1vh;
+  align-self: end;
+  justify-self: end;
+}
+.workLinkFour:nth-child(3) {
+  position: relative;
+  right: 4vw;
+  justify-self: end;
+}
+.workLinkFour:nth-child(4) {
+  position: relative;
+  left: 4vw;
+}
+.workLinkFour:nth-child(5) {
+  align-self: end;
+  justify-self: center;
+}
+.workLinkFour:nth-child(6) {
+  position: relative;
+  right: 4vw;
+  align-self: end;
+  justify-self: end;
+}
+.workLinkFour:nth-child(7) {
+  position: relative;
+  top: 2vh;
+
+  justify-self: center;
+  grid-column: span 3;
 }
 
 .workPreview {
@@ -28,19 +78,35 @@
   z-index: 1;
   position: sticky;
   width: 12vw;
-  transform: scale(1.5);
+  transform: scale(1.3);
   transition: transform 0.5s;
   cursor: url(../../public/assets/icons/hover.cur), auto;
 }
 
 /* work 페이지 */
+.yearContainer {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 10px;
+  position: absolute;
+  top: 15vh;
+  left: 5vw;
+  font-size: large;
+  font-family: "Pretendard Variable", sans-serif;
+  cursor: url(../../public/assets/icons/hover.cur), auto;
+}
+.yearContainer:hover {
+  cursor: url(../../public/assets/icons/hover.cur), auto;
+}
+
 .worksContainer {
   display: flex;
   flex-direction: row;
   position: relative;
   width: 90vw;
   height: 80vh;
-  top: 15vh;
+  top: 17vh;
   margin-left: auto;
   margin-right: auto;
   cursor: url(../../public/assets/icons/cur.cur), auto !important;
@@ -49,6 +115,7 @@
 /* 목록 */
 .listContainer {
   overflow-y: scroll;
+  overflow-x: hidden;
   display: flex;
   align-items: flex-start;
   align-items: center;
@@ -78,7 +145,7 @@
   object-fit: contain;
   margin-top: 1vh;
   width: auto;
-  height: 10vh;
+  height: 9vh;
 }
 
 .listItem:hover {
@@ -90,15 +157,17 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: center;
   margin-top: 3vh;
-  width: 75vw;
+  margin-left: 7vw;
+  width: 80vw;
   height: 70vh;
-  font-family: "NotoSansKR", sans-serif;
+  font-family: "Pretendard Variable", sans-serif;
 }
 
 .work {
-  max-height: 100%;
-  max-width: 50vw;
+  max-height: 70vh;
+  max-width: 65vw;
   object-fit: contain;
 }
 
@@ -126,15 +195,21 @@
     width: 90vw;
     height: 85vh;
   }
+  .yearContainer {
+    top: 9vh;
+  }
   .workPreview {
     transform: scale(1.2);
   }
   .worksContainer {
     flex-direction: column-reverse;
     align-items: center;
-    top: 5vh;
+    justify-self: center;
+    margin-left: 0;
+    margin-right: 0;
+    top: 12vh;
     width: 90vw;
-    height: 90vh;
+    height: 80vh;
   }
 
   .listContainer {
@@ -142,7 +217,7 @@
     overflow-y: hidden;
     display: flex;
     flex-direction: row;
-    width: 90vw;
+    width: 85vw;
     height: 20vh;
   }
 
@@ -155,14 +230,14 @@
     width: 18vw;
     height: auto;
     margin-top: 0vh;
-    margin-left: 1vw;
+    margin-left: 3vw;
   }
 
   .listItem {
     width: 10vw;
     height: auto;
     margin-top: 0vh;
-    margin-left: 1vw;
+    margin-left: 2vw;
   }
 
   .workContainer {
@@ -178,15 +253,34 @@
   }
 
   .nextButton {
-    display: none;
+    /* display: none; */
     height: 10px;
     margin-top: 0vh;
   }
 
   .nextButton::after {
-    display: none;
-    top: 0vh;
+    /* display: none; */
+    top: 65vh;
+    left: 40vw;
     width: 10px;
     height: 10px;
+    transform: rotate(45deg);
+  }
+
+  .backButton {
+    position: relative;
+    height: 10px;
+    margin-top: 0vh;
+  }
+  .backButton::after {
+    position: absolute;
+    top: 66.1vh;
+    left: -42vw;
+    content: "";
+    width: 10px;
+    height: 10px;
+    border-top: 1px solid #000;
+    border-right: 1px solid #000;
+    transform: rotate(-135deg);
   }
 }
