design: 아이콘 변경

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -7,6 +7,10 @@
   cursor: url(../../public/assets/icons/cur.cur), auto !important;
 }
 
+.headerIcon {
+  width: 30vw;
+}
+
 .miniHeaderContainer {
   display: flex;
   align-items: center;
