--- a/src/styles/footer.css
+++ b/src/styles/footer.css
@@ -2,7 +2,7 @@
   position: fixed;
   top: 95vh;
   left: 91vw;
-  font-family: "Noto Sans KR", sans-serif;
+  font-family: "Pretendard Variable", sans-serif;
   font-size: 0.7rem;
 }
 
