--- a/src/styles/works.css
+++ b/src/styles/works.css
@@ -86,14 +86,15 @@
 /* work 페이지 */
 .yearContainer {
   display: flex;
+  width: 10vw;
+  position: sticky;
+  top: 11vh;
+  left: 3vw;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
-  position: absolute;
-  top: 15vh;
-  left: 5vw;
   font-size: large;
-  font-family: "Pretendard Variable", sans-serif;
+  font-family: "Montserrat", "Noto Sans KR";
   cursor: url(../../public/assets/icons/hover.cur), auto;
 }
 .yearContainer:hover {
@@ -106,7 +107,7 @@
   position: relative;
   width: 90vw;
   height: 80vh;
-  top: 17vh;
+  top: 14vh;
   margin-left: auto;
   margin-right: auto;
   cursor: url(../../public/assets/icons/cur.cur), auto !important;
@@ -162,7 +163,7 @@
   margin-left: 7vw;
   width: 80vw;
   height: 70vh;
-  font-family: "Pretendard Variable", sans-serif;
+  font-family: "Montserrat", "Noto Sans KR";
 }
 
 .work {
@@ -195,8 +196,29 @@
     width: 90vw;
     height: 85vh;
   }
+  .workLinkFour:nth-child(1) {
+    left: 0;
+  }
+
+  .workLinkFour:nth-child(3) {
+    right: 0;
+  }
+  .workLinkFour:nth-child(4) {
+    left: 0;
+  }
+
+  .workLinkFour:nth-child(6) {
+    right: 0;
+  }
+
   .yearContainer {
-    top: 9vh;
+    font-size: 0.9rem;
+    width: 20vw;
+    top: 8vh;
+    left: 5vw;
+  }
+  .worksContainer {
+    left: 3vw;
   }
   .workPreview {
     transform: scale(1.2);
@@ -218,7 +240,7 @@
     display: flex;
     flex-direction: row;
     width: 85vw;
-    height: 20vh;
+    height: 18vh;
   }
 
   .listContainer::-webkit-scrollbar {
@@ -227,16 +249,17 @@
   }
 
   .currentListItem {
-    width: 18vw;
+    width: 13vw;
     height: auto;
-    margin-top: 0vh;
-    margin-left: 3vw;
+    margin-top: 1vh;
+    margin-left: 2vw;
+    opacity: 80%;
   }
 
   .listItem {
     width: 10vw;
     height: auto;
-    margin-top: 0vh;
+    margin-top: 1vh;
     margin-left: 2vw;
   }
 
@@ -244,7 +267,9 @@
     justify-content: center;
     width: 70vw;
     height: 65vh;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
+    margin-top: 0;
+    margin-left: 0;
   }
 
   .work {
