--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -4,7 +4,9 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 .background {
-  width: 100vw;
-  height: 100vh;
+  width: 88vw;
+  height: 97vh;
+  bottom: 3vh;
+  left: 6vw;
   cursor: url(../../public/assets/icons/cur.cur), auto !important;
 }
