--- a/src/styles/exhibitions.css
+++ b/src/styles/exhibitions.css
@@ -53,7 +53,6 @@
 
 .exhibitionInfo {
   text-align: center;
-  margin-bottom: 5vh;
   line-height: 0.9rem;
   height: 15vh;
 }
@@ -63,6 +62,12 @@
   max-width: 50vw;
   max-height: 100vh;
   object-fit: contain;
+}
+
+.exhibitionText {
+  line-height: 1.6rem;
+  width: 50vw;
+  word-break: keep-all;
 }
 
 @media all and (max-width: 767px) {
@@ -75,7 +80,6 @@
   }
   .exhibitionListItem {
     font-size: 0.7rem;
-    height: 28vh;
   }
   .poster {
     width: 70vw;
@@ -94,5 +98,9 @@
     margin-bottom: 3vh;
     max-width: 80vw;
     max-height: 60vh;
+  }
+  .exhibitionText {
+    line-height: 1.5rem;
+    width: 80vw;
   }
 }
