--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -13,11 +13,11 @@
 
 .songminji {
   font-family: "Montserrat";
-  font-weight: bold;
+  font-weight: 600;
   font-size: 2rem;
   color: black;
-  padding-top: 15px;
-  padding-left: 10px;
+  padding-top: 2.4vh;
+  padding-left: 1vw;
 }
 
 .miniHeaderContainer {
@@ -27,39 +27,48 @@
 }
 
 .miniHeaderIcon {
-  width: 3vw;
+  width: 4vw;
 }
 
 .openMiniHeaderMenu {
   display: flex;
   width: 20vw;
+  padding-left: 10px;
   align-items: flex-end;
   font-family: "Montserrat";
 }
+
 .miniHeaderItem {
   font-size: 1.3rem;
   padding-left: 1vw;
   color: black;
 }
 
+.miniHeaderItem:hover {
+  cursor: url(../../public/assets/icons/hover.cur), auto;
+}
+
 @media all and (max-width: 767px) {
   .headerIcon {
+    z-index: 1;
     width: 50vw;
   }
   .miniHeaderIcon {
     width: 8vw;
-    padding-right: 1vw;
+    padding-left: 1vw;
+    padding-right: 0;
   }
   .openMiniHeaderMenu {
     width: 35vw;
     column-gap: 1vw;
   }
   .songminji {
-    padding-top: 13px;
+    padding-top: 1.4vh;
+    padding-left: 5.3vw;
     font-size: 1.2rem;
   }
   .miniHeaderItem {
-    padding-top: 10px;
+    padding-top: 1vh;
     font-size: 0.9rem;
   }
 }
