--- a/src/styles/works.css
+++ b/src/styles/works.css
@@ -86,10 +86,10 @@
 /* work 페이지 */
 .yearContainer {
   display: flex;
-  width: 10vw;
+  width: 30vw;
   position: sticky;
-  top: 11vh;
-  left: 3vw;
+  top: 12vh;
+  left: 3.2vw;
   flex-direction: row;
   flex-wrap: wrap;
   gap: 10px;
@@ -199,6 +199,9 @@
   .workLinkFour:nth-child(1) {
     left: 0;
   }
+  .workLinkFour:nth-child(2) {
+    bottom: 0;
+  }
 
   .workLinkFour:nth-child(3) {
     right: 0;
@@ -212,14 +215,13 @@
   }
 
   .yearContainer {
-    font-size: 0.9rem;
-    width: 20vw;
-    top: 8vh;
-    left: 5vw;
+    z-index: 1;
+    font-size: 0.8rem;
+    width: 40vw;
+    top: 9vh;
+    left: 8vw;
   }
-  .worksContainer {
-    left: 3vw;
-  }
+
   .workPreview {
     transform: scale(1.2);
   }
@@ -229,7 +231,8 @@
     justify-self: center;
     margin-left: 0;
     margin-right: 0;
-    top: 12vh;
+    top: 10vh;
+    left: 3vw;
     width: 90vw;
     height: 80vh;
   }
@@ -240,7 +243,7 @@
     display: flex;
     flex-direction: row;
     width: 85vw;
-    height: 18vh;
+    height: 15vh;
   }
 
   .listContainer::-webkit-scrollbar {
@@ -253,7 +256,6 @@
     height: auto;
     margin-top: 1vh;
     margin-left: 2vw;
-    opacity: 80%;
   }
 
   .listItem {
@@ -267,7 +269,7 @@
     justify-content: center;
     width: 70vw;
     height: 65vh;
-    font-size: 0.8rem;
+    font-size: 0.7rem;
     margin-top: 0;
     margin-left: 0;
   }
@@ -285,7 +287,7 @@
 
   .nextButton::after {
     /* display: none; */
-    top: 65vh;
+    top: 61vh;
     left: 40vw;
     width: 10px;
     height: 10px;
@@ -299,7 +301,7 @@
   }
   .backButton::after {
     position: absolute;
-    top: 66.1vh;
+    top: 62.1vh;
     left: -42vw;
     content: "";
     width: 10px;
